// Copyright (c) 2021-2021 The Pastel Core developers
// Distributed under the MIT software license, see the accompanying
// file COPYING or http://www.opensource.org/licenses/mit-license.php.
syntax = "proto3";

option go_package = "github.com/LumeraProtocol/supernode/v2/gen/raptorq";

package raptorq;

service RaptorQ {
  rpc EncodeMetaData(EncodeMetaDataRequest) returns(EncodeMetaDataReply);
  rpc Encode(EncodeRequest) returns(EncodeReply);
  rpc Decode(DecodeRequest) returns(DecodeReply);
}

message EncodeMetaDataRequest {
  string path = 1;
  uint32 files_number = 2;
  string block_hash = 3;
  string pastel_id = 4;
}

message EncodeMetaDataReply {
  bytes encoder_parameters = 1;
  uint32 symbols_count = 2;
  string path = 3;
}

message EncodeRequest {
  string path = 1;
}

message EncodeReply {
  bytes encoder_parameters = 1;
  uint32 symbols_count = 2;
  string path = 3;
}

message DecodeRequest {
  bytes encoder_parameters = 1;
  string path = 2;
}

message DecodeReply {
  string path = 1;
}